[package]
name = "prosesmasher-app-checks-readability-assertions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Internal reusable readability-check assertions for the prosesmasher workspace."
readme = "../../../../../../README.md"

[dependencies]
prosesmasher-domain-types = { version = "0.3.16", path = "../../../../domain/types" }
prosesmasher-app-checks-core-runtime = { version = "0.3.16", path = "../../core/runtime" }
prosesmasher-app-checks-readability-runtime = { version = "0.3.16", path = "../runtime" }
prosesmasher-app-checks-test-support = { version = "0.3.16", path = "../../test-support" }
low-expectations.workspace = true

[lints]
workspace = true
